# est_lingbot_va

./: .gitignore  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DIAGRAM.md  CHANGES_SUMMARY.txt  DELIVERABLES.md  EVALUATION_PIPELINE.md  IMPLEMENTATION_STATUS.md  INDEX.md  INVESTIGATION_SUMMARY.txt  LATENT_DATA_DESIGN.md  MUJOCO_LOG.TXT  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README_RL.md  REPRO_NOTES_4090.md  SERVER_IMPLEMENTATION.md  pids_session.txt  pyproject.toml  sample.py  test.sh
configs/data/: demo_lerobot.yaml  robotwin_lerobot.yaml  smoke_lerobot.yaml  test_lerobot.yaml
configs/inference/: _smoke_i2va.yaml  demo.yaml  demo_i2va.yaml  franka.yaml  franka_i2va.yaml  libero.yaml  libero_i2va.yaml  libero_official_ckpt.yaml  robotwin.yaml  robotwin_fsdp.yaml  robotwin_i2va.yaml  robotwin_rl5.yaml  test.yaml  test_i2va.yaml
configs/model/: wan_va_default.yaml
configs/rl/: robotwin_grpo.yaml  robotwin_grpo_fsdp.yaml  robotwin_grpo_turn_switch_1machine.yaml  robotwin_grpo_turn_switch_1s_smoke.yaml  robotwin_grpo_turn_switch_check.yaml  robotwin_grpo_turn_switch_check_fsdp.yaml  robotwin_grpo_turn_switch_fast.yaml  robotwin_grpo_turn_switch_fast_est_rl_8_1.yaml  robotwin_grpo_turn_switch_pilot.yaml  robotwin_grpo_turn_switch_srmemdbg.yaml  robotwin_grpo_turn_switch_validation.yaml
configs/tasks/: smoke_fsdp.yaml  train_demo.yaml  train_libero.yaml  train_robotwin.yaml  train_test.yaml
docker/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  launch_eval.sh  requirements-robotwin.txt
evaluation/libero/: client.py  launch_server.sh
evaluation/robotwin/: balance_tasks.py  collect_seeds.py  collect_session_seeds.sh  eval_polict_client_openpi.py  (+17 more)
results/: valid_seeds_seed0.json
script/: _nccl_sanity.py  convert_wan_to_diffusers.py  run_launch_va_server_sync.sh  run_va_posttrain.sh  run_va_posttrain_multinode.sh
scripts/: convert_wan_to_diffusers.py  dcp_to_flat_ckpt.py  export_to_diffusers.py  nccl_sanity_multinode.sh  run_launch_va_server_sync.sh  run_robotwin_grpo_server.sh  run_robotwin_grpo_server_ddp.sh  run_robotwin_grpo_server_fsdp.sh  run_robotwin_grpo_server_split.sh  run_robotwin_grpo_turn_switch_fast.sh  run_robotwin_grpo_validation_server.sh  run_va_posttrain.sh  run_va_posttrain_multinode.sh  sweep_fsdp.sh
src/: run.py
tests/: test_grpo.py
wan_va/: train.py  wan_va_server.py
(+80 files in other folders)
