[project]
name = "LingBot_VA"
version = "0.0.0"
description = "LingBot-VA: A Pragmatic VA Foundation Model"
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    "torchaudio==2.9.0",
    "lerobot>=0.5.1",
    "diffusers",
    "transformers",
    "accelerate",
    "einops",
    "easydict",
    "flash-attn",
    "numpy",
    "tqdm",
    "imageio[ffmpeg]",
    "websockets",
    "msgpack",
    "opencv-python",
    "matplotlib",
    "ftfy",
    "safetensors",
    "Pillow",
    "scipy",
    "wandb"
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
