[project]
name = "LingBot_VA"
version = "0.0.0"
description = "LingBot-VA: A Pragmatic VA Foundation Model"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    "torchaudio==2.9.0",
    "lerobot>=0.5.0",
    "diffusers",
    "transformers",
    "accelerate",
    "einops",
    "easydict",
    "flash-attn",
    "numpy",
    "tqdm",
    "imageio[ffmpeg]",
    "websockets",
    "msgpack",
    "opencv-python",
    "matplotlib",
    "ftfy",
    "safetensors",
    "Pillow",
    "scipy",
    "wandb"
]

[tool.uv.sources]
flash-attn = { url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.0/flash_attn-2.8.3+cu128torch2.9-cp313-cp313-linux_x86_64.whl" }
