[project]
name = "LingBot_VA"
version = "0.0.0"
description = "LingBot-VA: A Pragmatic VA Foundation Model"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "torch==2.10.0",
    "torchvision==0.25.0",
    "torchaudio==2.10.0",
    "lerobot>=0.5.1",
    "diffusers",
    "transformers",
    "accelerate",
    "einops",
    "easydict",
    "lightning>=2.4",
    "pyyaml-include>=1.4,<2",
    "pyyaml",
    "numpy",
    "tqdm",
    "imageio[ffmpeg]",
    "websockets",
    "msgpack",
    "opencv-python",
    "matplotlib",
    "ftfy",
    "safetensors",
    "Pillow",
    "scipy",
    "wandb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
override-dependencies = [
    "torchcodec==0.10.*", # latest for PyTorch 2.10
]
